compiler/testData/diagnostics/tests/enum/enumWithEmptyName.kt
// FIR_IDENTICAL
enum class<!SYNTAX!><!> {
}
